# reflow-oven

./: README.md
.github/: dependabot.yml
.github/workflows/: branch-protection.yaml
.zed/: settings.json
hardware/: .gitignore  Reflow_Oven.kicad_sym
hardware/MAX31855K_Breakout/: .gitignore  MAX31855K_Breakout.kicad_pcb  MAX31855K_Breakout.kicad_pro  MAX31855K_Breakout.kicad_sch  fp-lib-table  sym-lib-table
hardware/Reflow_Oven.pretty/: USB_C_Receptacle.kicad_mod
software/: Cargo.toml
software/.cargo/: config.toml
software/src/: common.rs  led.rs  main.rs  profile.rs  temperature.rs
