[package]
name = "reflow-oven"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
defmt = "1"
defmt-rtt = { version = "1", features = ["disable-blocking-mode"] }
embassy-executor = { version = "0.9.0" }
embassy-futures = "0.1.2"
embassy-sync = { version = "0.7.2" }
embassy-time = "0.5.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.0", features = ["panic-handler", "esp32c6", "defmt"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable", "defmt"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp32c6"] }
heapless = { version = "0.9.1" }
pid = "4.0.0"
splines = { version = "5.0.0", default-features = false, features = ["num-traits"] }
static_cell = "2.1.1"
uuid = { version = "1.19.0", default-features = false }
